vehicle response mapping
